# cStandradLibrary

./: .gitignore  CMakeLists.txt  README.md
assert/: assert.c
built_in/: VA_ARGS.c  pragma.c  va.c
dirent/: closedir.c  dirent.md  dirfd.c  fdopendir.c  opendir.c  opendir2.c  readdir.c  readdir_r.c  rewinddir.c  seekdir.c  telldir.c  template.c
fcntl/: SubReadFd.c  fcntl.c  fcntl.mac.pre.c  fcntl.md  fcntl_F_DUPFD.c  fcntl_F_GETFD.c  fcntl_F_GETFL.c  fcntl_F_SETFD.c  fcntl_F_SETFL.c  fcntl_O_NONBLOCK.c  openat.c  template.c
iso646/: iso646.c
limits/: limits.c
locale/: local.c
math/: cos.c  sin.c
netdb/: getaddrinfo.c  gethostbyaddr.c  gethostbyname.c  gethostbyname.pre.c  template.c
openssl/: CMakeLists.txt  aes.c
openssl/AES/: AES.md  CMakeLists.txt  Makefile  aes.c
pthread/: pthread.Mac.pre.c  pthreadCppTest.cpp  pthread_create.c  pthread_create2.c  template.c
setjmp/: setjmp.c  template.c
socket/: Makefile  accept.c  bind.c  bind.pre.mac.c  connect.c  getpeername.c  getsockopt.c  listen.c  recv.c  recvfrom.c  sendto.c  setsockopt.c  socker.pre.mac.c  socket.c  socket.md  socket_Daemon_thread.c  socket_fcntl.c  socket_read.c  template.c
stdarg/: va_copy.c  va_list.c
stdio/: asprintf.c  deleteMe.txt  feof.c  ferror.c  fflush.c  fgetc.c  fgets.c  fileno.c  fopen.c  fprintf.c  fputs.c  fread.c  freopen.c  fscanf.c  fseek.c  fsetpos.c  ftell.c  fwrite.c  getc.c  getw.c  printf.c  printf.pre.c  puts.c  remove.c  rename.c  setbuff.c  setlinebuff.c  setvbuff.c  snprintf.c  sprintf.c  struct_file.h  sys_errlist.c  tmpfile.c  vfprintf.c  vprintf.c  (+3 more)
(+148 files in other folders)
